--- a/.gitignore
+++ b/.gitignore
@@ -19,14 +19,14 @@
 # Fortran module files
 *.mod
 *.smod
-
 # Compiled Static libraries
 *.lai
 *.la
 *.a
 *.lib
-
 # Executables
 *.exe
 *.out
 *.app
+*.zip
+/build
