--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -3,8 +3,9 @@ cmake_minimum_required(VERSION 3.12)
 project(opengl_test)
 find_package(glfw3 REQUIRED)
 add_subdirectory(lib/glad)
+add_subdirectory(lib/05_dir)
 
-
-add_executable(opengl_test main.cpp)
-target_link_libraries(opengl_test PRIVATE glad)
-target_link_libraries(opengl_test PRIVATE glfw3)
+add_executable(opengl_test_1 main.cpp)
+target_link_libraries(opengl_test_1 PRIVATE glad)
+target_link_libraries(opengl_test_1 PRIVATE glfw3)
+target_link_libraries(opengl_test_1 PRIVATE Operator_OverLoading)
