--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 3.12)
 
-project(opengl_test)
-find_package(glfw3 REQUIRED)
-add_subdirectory(lib/glad)
-add_subdirectory(lib/05_dir)
-
-add_executable(opengl_test_1 main.cpp)
-target_link_libraries(opengl_test_1 PRIVATE glad)
-target_link_libraries(opengl_test_1 PRIVATE glfw3)
-target_link_libraries(opengl_test_1 PRIVATE Operator_OverLoading)
+project(emscripten_test)
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_EXECUTABLE_SUFFIX ".html")
+add_subdirectory(./lib/05_dir) 
+add_executable(emscripten_test_2 src/pong.cpp)
+target_link_libraries(emscripten_test_2 PRIVATE Operator_OverLoading)
+set_target_properties(emscripten_test_2 PROPERTIES LINK_FLAGS  "-O2 -s  USE_WEBGL2=2 -s USE_GLFW=3   -s WASM=1 -std=c++11 --shell-file html/shell_minimal.html")
+ 
