--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -18,7 +18,7 @@ endif()
 #message(STATUS "GLM included at ${GLM_INCLUDE_DIR}")
 set(SRC 
 #src/main_gl_c7_Textures.cpp
-src/main_gl_c25-c26_face_culling_and_framebuffer.cpp
+src/main_gl_c27_cubemap.cpp
 #src/main_fractalTree2D_Basic.cpp
 )
 
