--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -18,7 +18,7 @@ endif()
 #message(STATUS "GLM included at ${GLM_INCLUDE_DIR}")
 set(SRC 
 #src/main_gl_c7_Textures.cpp
-src/main_gl_c28-c29_more_opengl_feature.cpp
+src/main_games201_hw1.cpp
 #src/main_fractalTree2D_Basic.cpp
 )
 
@@ -33,6 +33,7 @@ message("IMGUI_DIR is ${IMGUI_DIR}")
 add_subdirectory(externs/implot)
  add_subdirectory(externs/glm)
  add_subdirectory(externs/tinygltf)
+  add_subdirectory(externs/eigen)
 message("${SRC}")
 #find_package(OpenGL REQUIRED)
 
@@ -57,6 +58,7 @@ add_subdirectory(lib/05_dir)
 add_subdirectory(lib/lyh_gl_lib)
 add_subdirectory(lib/computational_geometry_exercise)
 add_subdirectory(lib/DDON)
+add_subdirectory(lib/games102_GMP_hw)
 add_executable(${EXCE_NAME} 
     ${SRC} 
     #${IMGUI_SRC}
@@ -67,7 +69,7 @@ target_link_libraries(${EXCE_NAME}  PRIVATE lib_imgui)
 target_link_libraries(${EXCE_NAME}  PRIVATE lib_implot)
 target_link_libraries(${EXCE_NAME}  PRIVATE lib_glm)
 target_link_libraries(${EXCE_NAME}  PRIVATE lib_tiny_gltf)
-
+target_link_libraries(${EXCE_NAME}  PRIVATE lib_eigen) 
 #message("GLM_LIB_DIR = ${LIB_GLM_DIR}")
 if(BUILDWASM)
 
@@ -86,7 +88,7 @@ target_link_libraries(${EXCE_NAME}  PRIVATE Operator_OverLoading)
 target_link_libraries(${EXCE_NAME}  PRIVATE lyh_gl_lib)
 target_link_libraries(${EXCE_NAME}  PRIVATE DDoN)
 target_link_libraries(${EXCE_NAME}  PRIVATE comp_geo_exercise) 
- 
+target_link_libraries(${EXCE_NAME}  PRIVATE games201_hw) 
 
     
 link_directories("E:/Program/libtorch/lib")
